tests/vertical-slice/reject/actor_builtin_send_no_handler.hew
// Reject: `ref.send(msg)` on a named actor that has no `receive fn send`
// handler is permanently rejected at the type-checker with an actionable
// UndefinedMethod diagnostic. The anonymous-payload `.send()` surface has no
// lowerable mailbox slot — actors only receive messages through named
// `receive fn` handlers. This fixture confirms the compiler surfaces the error
// at check time (not deep in HIR lowering) with guidance on the fix.
//
// Distinct from `actor_receive_fn_named_send.hew` (accept): when the actor
// DOES declare `receive fn send(...)` the call dispatches correctly.
actor Adder {
    var count: i64;
    receive fn increment(n: i64) {
        count = count + n;
    }
}

fn main() -> i64 {
    let a = spawn Adder(count: 0);
    a.send(10);
    0
}
